<resources>
    <string name="app_name">课程助手</string>
    <string name="title_video">录屏</string>
    <string name="title_image">截屏</string>
    <string name="title_record">摄像</string>
    <string name="title_set">设置</string>
    <string name="permiss_false">获取权限失败,请先打开设置,获取读写权限</string>
    <string name="no_start">暂未开始录屏</string>
    <string name="path">文件路径:</string>
    <string name="pdf">课件</string>
    <string name="accessibility_description">测试</string>
    <string name="versionInfo">版本:1.0.0 </string>
    <string name="support">本软件由邢伟璐制作开发</string>
    <string name="updateInfo">最新版本</string>
    <string name="size1">宽:1920*高1280</string>
    <string name="size2">宽1280*高720</string>
    <string name="sure">确定</string>
    <string name="resver">取消</string>
    <string name="savesucess">保存成功</string>
    <string name="setsize">视频尺寸设置:</string>
    <string name="no_video">没有该视频文件</string>
    <string name="no_audio">没有该媒体文件</string>
    <string name="already" >您已经选择该文件夹了</string>
    <string name="add">增加</string>
    <string name="pdfpath">pdf文件保存路径</string>
    <string name="addPath">请前往设置界面增加扫描文件路径</string>
    <string name="no_pdf">文件不存在，为您自动删除</string>
    <string name="startservice">开启服务</string>
    <string name="stopservice">关闭服务</string>
    <string name="no_pdfs">未发现pdf文件，请尝试到设计界面添加新的路径</string>
</resources>
