<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/carme"
        android:title="@string/title_image" />
    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/record"
        android:title="@string/title_record" />
    <item
        android:id="@+id/navigation_pdf"
        android:icon="@drawable/pdf"
        android:title="@string/pdf" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/seeting"
        android:title="@string/title_set" />

</menu>
